// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component Renders correctly with home theme 1`] = `
<div>
  <div
    class="bg-white"
  >
    <header
      class="relative bg-white"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 sm:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-grey-whisper"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-white p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                aria-hidden="true"
                class="h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-8"
            >
              <a
                class="flex items-center text-gray-700 hover:text-gray-800"
                href="/taste-finder"
              >
                <span
                  class="uppercase text-sm leading-5 font-normal"
                >
                  Tastefinder
                </span>
              </a>
              <a
                class="flex items-center text-gray-700 hover:text-gray-800"
                href="/our-roasters"
              >
                <span
                  class="uppercase text-sm leading-5 font-normal"
                >
                  Unsere Röster
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="/"
          >
            <span
              class="sr-only"
            >
              Famous Roasters
            </span>
            <div
              class="xl:hidden font-syne text-3xl"
            >
              <span>
                F
              </span>
              <span
                class="font-extrabold"
              >
                R
              </span>
            </div>
            <div
              class="hidden xl:block font-syne text-xl text-center"
            >
              <div
                class="h-5"
              >
                Famous
              </div>
              <div
                class="font-extrabold"
              >
                Roasters
              </div>
            </div>
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/about"
                >
                  <span
                    class="uppercase text-sm leading-5 font-normal"
                  >
                    Über uns
                  </span>
                </a>
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/contact"
                >
                  <span
                    class="uppercase text-sm leading-5 font-normal"
                  >
                    Kontakt
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block p-2 text-gray-400 hover:text-gray-500 xl:ml-6"
                href="/account"
              >
                <span
                  class="sr-only"
                >
                  Konto
                </span>
                <svg
                  aria-hidden="true"
                  class="w-6 h-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-6"
              >
                <button
                  class="inline-flex items-center rounded-full border-2 px-3 py-2 text-sm font-semibold text-white bg-brand-black border-transparent hover:bg-coreUI-text-secondary active:bg-brand-black"
                  data-testid="button-shop"
                  role="button"
                >
                  Shop
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Navigation component Renders correctly with shop theme 1`] = `
<div>
  <div
    class="bg-white"
  >
    <header
      class="relative bg-white"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 sm:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-grey-whisper"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-white p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                aria-hidden="true"
                class="h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-8"
            >
              <a
                class="flex items-center text-gray-700 hover:text-gray-800"
                href="/taste-finder"
              >
                <span
                  class="uppercase text-sm leading-5 font-normal"
                >
                  Tastefinder
                </span>
              </a>
              <a
                class="flex items-center text-gray-700 hover:text-gray-800"
                href="/our-roasters"
              >
                <span
                  class="uppercase text-sm leading-5 font-normal"
                >
                  Unsere Röster
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="/"
          >
            <span
              class="sr-only"
            >
              Famous Roasters
            </span>
            <div
              class="xl:hidden font-syne text-3xl"
            >
              <span>
                F
              </span>
              <span
                class="font-extrabold"
              >
                R
              </span>
            </div>
            <div
              class="hidden xl:block font-syne text-xl text-center"
            >
              <div
                class="h-5"
              >
                Famous
              </div>
              <div
                class="font-extrabold"
              >
                Roasters
              </div>
            </div>
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/about"
                >
                  <span
                    class="uppercase text-sm leading-5 font-normal"
                  >
                    Über uns
                  </span>
                </a>
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/contact"
                >
                  <span
                    class="uppercase text-sm leading-5 font-normal"
                  >
                    Kontakt
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block p-2 text-gray-400 hover:text-gray-500 xl:ml-6"
                href="/account"
              >
                <span
                  class="sr-only"
                >
                  Konto
                </span>
                <svg
                  aria-hidden="true"
                  class="w-6 h-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-6"
              >
                <a
                  class="group -m-2 p-2 flex items-center"
                  href="/cart"
                >
                  <svg
                    aria-hidden="true"
                    class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                  <span
                    class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                  >
                    0
                  </span>
                  <span
                    class="sr-only"
                  >
                    items in cart, view bag
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;
